# Astrophysics-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: .ci.yml
include/: Astrodynamics.h  CelestialBody.h  Ephemeris.h  Matrix3.h  Orbit.h  OrbitalConverter.h  OrbitalMath.h  OrbitalPropagator.h  RK4Integrator.h  Spacecraft.h  StateVector.h  Trajectory.h  TrajectoryPoint.h  Vec3.h
src/: CMakeLists.txt  CelestialBody.cpp  Ephemeris.cpp  Orbit.cpp  OrbitalConverter.cpp  OrbitalPropagator.cpp  Spacecraft.cpp  StateVector.cpp  TrajectoryPoint.cpp  main.cpp
tests/: CMakeLists.txt  placeholder_test.cpp  test_astrodynamics.cpp  test_celestial_body.cpp  test_orbit.cpp  test_orbital_converter.cpp  test_propagator.cpp  test_rk4.cpp  test_spacecraft.cpp  test_state_vector.cpp  test_trajectory_point.cpp
