include(GoogleTest)

add_executable(test_orbit test_orbit.cpp)
target_link_libraries(test_orbit PRIVATE Astrophysics_Engine_Core GTest::gtest_main)
gtest_discover_tests(test_orbit)

add_executable(test_celestial_body test_celestial_body.cpp)
target_link_libraries(test_celestial_body PRIVATE Astrophysics_Engine_Core GTest::gtest_main)
gtest_discover_tests(test_celestial_body)

add_executable(test_spacecraft test_spacecraft.cpp)
target_link_libraries(test_spacecraft PRIVATE Astrophysics_Engine_Core GTest::gtest_main)
gtest_discover_tests(test_spacecraft)

add_executable(test_state_vector test_state_vector.cpp)
target_link_libraries(test_state_vector PRIVATE Astrophysics_Engine_Core GTest::gtest_main)
gtest_discover_tests(test_state_vector)

add_executable(test_orbital_converter test_orbital_converter.cpp)
target_link_libraries(test_orbital_converter PRIVATE Astrophysics_Engine_Core GTest::gtest_main)
gtest_discover_tests(test_orbital_converter)